# RayTracer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt
src/camera/: camera.cpp  camera.h
src/material/: lambertian.cpp  lambertian.h  material.h  metal.cpp  metal.h
src/ray/: ray.cpp  ray.h
src/sim_objects/: sim_object.cpp  sim_object.h  sim_object_list.cpp  sim_object_list.h  sphere.cpp  sphere.h
src/utility/: constants.h  utility.h
src/vec3/: colour.cpp  colour.h  vec3.cpp  vec3.h
standalone/: CMakeLists.txt
standalone/raytracer/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/test/: CMakeLists.txt  test.cpp
